--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,84 +1,252 @@
 ---
 ---
-
-@string{aps = {American Physical Society,}}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
+@inproceedings{gao2020discrete,
+  title={Discrete model compression with resource constraint for deep neural networks},
+  author={[Gao], [Shangqian]  and Huang, Feihu and Pei, Jian and Huang, Heng},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition  (CVPR)},
+  pages={1899--1908},
+  year={2020},
+  abbr={CVPR},
+}
+@inproceedings{gao2021network,
+  title={Network pruning via performance maximization},
+  author={[Gao], [Shangqian]  and Huang, Feihu and Cai, Weidong and Huang, Heng},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
+  pages={9270--9280},
+  year={2021}
+  abbr={CVPR},
 }
 
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
+@inproceedings{huang2021bregman,
+  title={Bregman Gradient Policy Optimization},
+  author={[Gao*], [Shangqian]  and Huang*, Feihu and Huang, Heng},
+  booktitle={International Conference on Learning Representations (ICLR)},
+  year={2022}
+  abbr={ICLR},
+}
+@inproceedings{
+gao2023learning,
+title={Learning to Jointly Share and Prune Weights for Grounding Based Vision and Language Models},
+author={[Gao], [Shangqian]  and Uzkent, Burak and Shen, Yilin and Huang, Heng and Jin, Hongxia},
+booktitle={International Conference on Learning Representations (ICLR)},
+year={2023},
+url={https://openreview.net/forum?id=UMERaIHMwB3},
+abbr={ICLR},
 }
 
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  selected={true}
+@inproceedings{ali2023effconv,
+  title={EffConv: Efficient Learning of Kernel Sizes for Convolution Layers of CNNs},
+  author={Ganjdanesh, Alireza and [Gao], [Shangqian]  and Huang, Heng},
+  booktitle={Proceedings of the AAAI Conference on Artificial Intelligence (AAAI)},
+  year={2023},
+  abbr={AAAI},
 }
-
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@inproceedings{gao2022disentangled,
+  title={Disentangled differentiable network pruning},
+  author={[Gao], [Shangqian]  and Huang, Feihu and Zhang, Yanfu and Huang, Heng},
+  booktitle={European Conference on Computer Vision (ECCV)},
+  pages={328--345},
+  year={2022},
+  organization={Springer},
+  abbr={ECCV},
 }
-
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@inproceedings{zhang2021exploration,
+  title={Exploration and estimation for model compression},
+  author={ [Gao*], [Shangqian] and Zhang*, Yanfu and Huang, Heng},
+  booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV)},
+  pages={487--496},
+  year={2021},
+  abbr={ICCV},
 }
-
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@inproceedings{ganjdanesh2022interpretations,
+  title={Interpretations steered network pruning via amortized inferred saliency maps},
+  author={[Gao*], [Shangqian] and Ganjdanesh*, Alireza and Huang, Heng},
+  booktitle={European Conference on Computer Vision (ECCV)},
+  pages={278--296},
+  year={2022},
+  organization={Springer},
+  abbr={ECCV},
 }
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif}
+@InProceedings{Gao_2019_CVPR,
+author = {[Gao], [Shangqian]  and Deng, Cheng and Huang, Heng},
+title = {Cross Domain Model Compression by Structurally Weight Sharing},
+booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
+month = {June},
+year = {2019},
+abbr={CVPR},
+}
+@article{li2019cross,
+  title={Cross-modal learning with adversarial samples},
+  author={Li, Chao and [Gao], [Shangqian]  and Deng, Cheng and Xie, De and Liu, Wei},
+  journal={Advances in neural information processing systems (NeurIPS)},
+  volume={32},
+  year={2019},
+  abbr={CVPR},
+}
+@inproceedings{li2021adversarial,
+  title={Adversarial attack on deep cross-modal hamming retrieval},
+  author={ [Gao*], [Shangqian] and Li*, Chao and Deng, Cheng and Liu, Wei and Huang, Heng},
+  booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV)},
+  pages={2218--2227},
+  year={2021},
+  abbr={ICCV},
+}
+@inproceedings{
+huang2022bregman,
+title={Bregman Gradient Policy Optimization},
+author={[Shangqian] [Gao]* and Feihu Huang* and Heng Huang},
+booktitle={International Conference on Learning Representations (ICLR)},
+year={2022},
+url={https://openreview.net/forum?id=ZU-zFnTum1N},
+abbr={ICLR},
+}
+@inproceedings{zhang2022recover,
+  title={Recover fair deep classification models via altering pre-trained structure},
+  author={Zhang, Yanfu and [Gao], [Shangqian]  and Huang, Heng},
+  booktitle={European Conference on Computer Vision (ECCV)},
+  pages={481--498},
+  year={2022},
+  organization={Springer},
+  abbr={ECCV},
+}
+@article{gao2023sa,
+  title={Structural alignment for network pruning through partial regularization},
+  author={[Gao], [Shangqian]  and Zhang, Zeyu and Zhang, Yanfu and Huang, Feihu and Huang, Heng},
+  journal={Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV)},
+  year={2023},
+  abbr={ICCV},
+}
+@inproceedings{huang2020momentum,
+  title={Momentum-based policy gradient methods},
+  author={Huang, Feihu and [Gao], [Shangqian]  and Pei, Jian and Huang, Heng},
+  booktitle={International conference on machine learning (ICML)},
+  pages={4422--4433},
+  year={2020},
+  organization={PMLR},
+  abbr={ICML},
+}
+@article{huang2022enhanced,
+  title={Enhanced bilevel optimization via bregman distance},
+  author={Huang, Feihu and Li, Junyi and [Gao], [Shangqian]  and Huang, Heng},
+  journal={Advances in Neural Information Processing Systems (NeurIPS)},
+  volume={35},
+  pages={28928--28939},
+  year={2022},
+  abbr={NeurIPS},
+}
+@article{yang2016discriminative,
+  title={Discriminative multi-instance multitask learning for 3D action recognition},
+  author={Yang, Yanhua and Deng, Cheng and [Gao], [Shangqian]  and Liu, Wei and Tao, Dapeng and Gao, Xinbo},
+  journal={IEEE Transactions on Multimedia},
+  volume={19},
+  number={3},
+  pages={519--529},
+  year={2016},
+  publisher={IEEE},
+  abbr={TMM},
+}
+@inproceedings{gao2019cross,
+  title={Cross domain model compression by structurally weight sharing},
+  author={[Gao], [Shangqian]  and Deng, Cheng and Huang, Heng},
+  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
+  pages={8973--8982},
+  year={2019},
+  abbr={CVPR},
+}
+@inproceedings{huo2017video,
+  title={Video recovery via learning variation and consistency of images},
+  author={Huo, Zhouyuan and [Gao], [Shangqian] and Cai, Weidong and Huang, Heng},
+  booktitle={Proceedings of the AAAI Conference on Artificial Intelligence (AAAI)},
+  volume={31},
+  number={1},
+  year={2017},
+  abbr={AAAI},
+}
+@article{huang2019zeroth,
+  title={Zeroth-order stochastic alternating direction method of multipliers for nonconvex nonsmooth optimization},
+  author={Huang, Feihu and [Gao], [Shangqian]  and Chen, Songcan and Huang, Heng},
+  journal={International Joint Conferences on Artificial Intelligence (IJCAI)},
+  pages={2549-2555},
+  year={2019},
+   abbr={IJCAI},
+}
+@inproceedings{kong2018action,
+  title={Action prediction from videos via memorizing hard-to-predict samples},
+  author={[Gao]*, [Shangqian] and Kong*, Yu and Sun, Bin and Fu, Yun},
+  booktitle={Proceedings of the AAAI conference on artificial intelligence  (AAAI)},
+  volume={32},
+  number={1},
+  year={2018},
+  abbr={AAAI},
+}
+@article{gu2021black,
+  title={Black-box reductions for zeroth-order gradient algorithms to achieve lower query complexity},
+  author={Gu, Bin and Wei, Xiyuan and [Gao], [Shangqian] and Xiong, Ziran and Deng, Cheng and Huang, Heng},
+  journal={The Journal of Machine Learning Research (JMLR)},
+  volume={22},
+  number={1},
+  pages={7685--7731},
+  year={2021},
+  publisher={JMLRORG},
+  abbr={JMLR},
+}
+@article{huang2022riemannian,
+  title={Riemannian gradient methods for stochastic composition problems},
+  author={Huang, Feihu and [Gao], [Shangqian]},
+  journal={Neural Networks},
+  volume={153},
+  pages={224--234},
+  year={2022},
+  publisher={Elsevier},
+  abbr={NN},
+}
+@article{huang2022accelerated,
+  title={Accelerated zeroth-order and first-order momentum methods from mini to minimax optimization},
+  author={Huang, Feihu and [Gao], [Shangqian] and Pei, Jian and Huang, Heng},
+  journal={The Journal of Machine Learning Research  (JMLR)},
+  volume={23},
+  number={1},
+  pages={1616--1685},
+  year={2022},
+  publisher={JMLRORG},
+  abbr={JMLR},
+}
+@inproceedings{zhang2022improving,
+  title={Improving social network embedding via new second-order continuous graph neural networks},
+  author={Zhang, Yanfu and [Gao], [Shangqian] and Pei, Jian and Huang, Heng},
+  booktitle={Proceedings of the 28th ACM SIGKDD conference on knowledge discovery and data mining  (KDD)},
+  pages={2515--2523},
+  year={2022},
+  abbr={KDD},
+}
+@article{huang2023gradient,
+  title={Gradient Descent Ascent for Minimax Problems on Riemannian Manifolds},
+  author={Huang, Feihu and  [Gao], [Shangqian]},
+  journal={IEEE Transactions on Pattern Analysis and Machine Intelligence (PAMI)},
+  year={2023},
+  publisher={IEEE},
+  abbr={TPAMI},
+}
+@article{huang2022enhanced,
+  title={Enhanced bilevel optimization via bregman distance},
+  author={Huang, Feihu and Li, Junyi and [Gao], [Shangqian] and Huang, Heng},
+  journal={Advances in Neural Information Processing Systems},
+  volume={35},
+  pages={28928--28939},
+  year={2022},
+  abbr={NeurIPS},
+}
+@inproceedings{EMNLP23,
+  author       = {Ting Hua* and Xiao Li* and [Shangqian] 
+                  [Gao]
+                  Yen{-}Chang Hsu and
+                  Felicity Wang and
+                  Qian Lou and
+                  Yilin Shen and
+                  Hongxia Jin},
+  title        = {Dynamic Low-rank Estimation for Transformer-based Language Models},
+  booktitle    = {Proceedings of the 2023 Conference on Empirical Methods in Natural
+                  Language Processing Findings (EMNLP findings) (to appear)},
+  year         = {2023},
+  abbr={EMNLP},
 }
