--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,7 +2,7 @@
 ---
 @inproceedings{gao2020discrete,
   title={Discrete model compression with resource constraint for deep neural networks},
-  author={[Gao], [Shangqian]  and Huang, Feihu and Pei, Jian and Huang, Heng},
+  author={Gao, Shangqian  and Huang, Feihu and Pei, Jian and Huang, Heng},
   booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition  (CVPR)},
   pages={1899--1908},
   year={2020},
@@ -10,24 +10,24 @@
 }
 @inproceedings{gao2021network,
   title={Network pruning via performance maximization},
-  author={[Gao], [Shangqian]  and Huang, Feihu and Cai, Weidong and Huang, Heng},
+  author={Gao, Shangqian  and Huang, Feihu and Cai, Weidong and Huang, Heng},
   booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
   pages={9270--9280},
-  year={2021}
+  year={2021},
   abbr={CVPR},
 }
 
 @inproceedings{huang2021bregman,
   title={Bregman Gradient Policy Optimization},
-  author={[Gao*], [Shangqian]  and Huang*, Feihu and Huang, Heng},
+  author={Gao*, Shangqian  and Huang*, Feihu and Huang, Heng},
   booktitle={International Conference on Learning Representations (ICLR)},
-  year={2022}
+  year={2022},
   abbr={ICLR},
 }
 @inproceedings{
 gao2023learning,
 title={Learning to Jointly Share and Prune Weights for Grounding Based Vision and Language Models},
-author={[Gao], [Shangqian]  and Uzkent, Burak and Shen, Yilin and Huang, Heng and Jin, Hongxia},
+author={Gao, Shangqian  and Uzkent, Burak and Shen, Yilin and Huang, Heng and Jin, Hongxia},
 booktitle={International Conference on Learning Representations (ICLR)},
 year={2023},
 url={https://openreview.net/forum?id=UMERaIHMwB3},
@@ -36,14 +36,14 @@ abbr={ICLR},
 
 @inproceedings{ali2023effconv,
   title={EffConv: Efficient Learning of Kernel Sizes for Convolution Layers of CNNs},
-  author={Ganjdanesh, Alireza and [Gao], [Shangqian]  and Huang, Heng},
+  author={Ganjdanesh, Alireza and Gao, Shangqian  and Huang, Heng},
   booktitle={Proceedings of the AAAI Conference on Artificial Intelligence (AAAI)},
   year={2023},
   abbr={AAAI},
 }
 @inproceedings{gao2022disentangled,
   title={Disentangled differentiable network pruning},
-  author={[Gao], [Shangqian]  and Huang, Feihu and Zhang, Yanfu and Huang, Heng},
+  author={Gao, Shangqian  and Huang, Feihu and Zhang, Yanfu and Huang, Heng},
   booktitle={European Conference on Computer Vision (ECCV)},
   pages={328--345},
   year={2022},
@@ -52,7 +52,7 @@ abbr={ICLR},
 }
 @inproceedings{zhang2021exploration,
   title={Exploration and estimation for model compression},
-  author={ [Gao*], [Shangqian] and Zhang*, Yanfu and Huang, Heng},
+  author={ Gao*, Shangqian and Zhang*, Yanfu and Huang, Heng},
   booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV)},
   pages={487--496},
   year={2021},
@@ -60,7 +60,7 @@ abbr={ICLR},
 }
 @inproceedings{ganjdanesh2022interpretations,
   title={Interpretations steered network pruning via amortized inferred saliency maps},
-  author={[Gao*], [Shangqian] and Ganjdanesh*, Alireza and Huang, Heng},
+  author={Gao*, Shangqian and Ganjdanesh*, Alireza and Huang, Heng},
   booktitle={European Conference on Computer Vision (ECCV)},
   pages={278--296},
   year={2022},
@@ -68,7 +68,7 @@ abbr={ICLR},
   abbr={ECCV},
 }
 @InProceedings{Gao_2019_CVPR,
-author = {[Gao], [Shangqian]  and Deng, Cheng and Huang, Heng},
+author = {Gao, Shangqian  and Deng, Cheng and Huang, Heng},
 title = {Cross Domain Model Compression by Structurally Weight Sharing},
 booktitle = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
 month = {June},
@@ -77,7 +77,7 @@ abbr={CVPR},
 }
 @article{li2019cross,
   title={Cross-modal learning with adversarial samples},
-  author={Li, Chao and [Gao], [Shangqian]  and Deng, Cheng and Xie, De and Liu, Wei},
+  author={Li, Chao and Gao, Shangqian  and Deng, Cheng and Xie, De and Liu, Wei},
   journal={Advances in neural information processing systems (NeurIPS)},
   volume={32},
   year={2019},
@@ -85,7 +85,7 @@ abbr={CVPR},
 }
 @inproceedings{li2021adversarial,
   title={Adversarial attack on deep cross-modal hamming retrieval},
-  author={ [Gao*], [Shangqian] and Li*, Chao and Deng, Cheng and Liu, Wei and Huang, Heng},
+  author={ Gao*, Shangqian and Li*, Chao and Deng, Cheng and Liu, Wei and Huang, Heng},
   booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV)},
   pages={2218--2227},
   year={2021},
@@ -94,7 +94,7 @@ abbr={CVPR},
 @inproceedings{
 huang2022bregman,
 title={Bregman Gradient Policy Optimization},
-author={[Shangqian] [Gao]* and Feihu Huang* and Heng Huang},
+author={Shangqian Gao* and Feihu Huang* and Heng Huang},
 booktitle={International Conference on Learning Representations (ICLR)},
 year={2022},
 url={https://openreview.net/forum?id=ZU-zFnTum1N},
@@ -102,7 +102,7 @@ abbr={ICLR},
 }
 @inproceedings{zhang2022recover,
   title={Recover fair deep classification models via altering pre-trained structure},
-  author={Zhang, Yanfu and [Gao], [Shangqian]  and Huang, Heng},
+  author={Zhang, Yanfu and Gao, Shangqian  and Huang, Heng},
   booktitle={European Conference on Computer Vision (ECCV)},
   pages={481--498},
   year={2022},
@@ -111,14 +111,14 @@ abbr={ICLR},
 }
 @article{gao2023sa,
   title={Structural alignment for network pruning through partial regularization},
-  author={[Gao], [Shangqian]  and Zhang, Zeyu and Zhang, Yanfu and Huang, Feihu and Huang, Heng},
+  author={Gao, Shangqian  and Zhang, Zeyu and Zhang, Yanfu and Huang, Feihu and Huang, Heng},
   journal={Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV)},
   year={2023},
   abbr={ICCV},
 }
 @inproceedings{huang2020momentum,
   title={Momentum-based policy gradient methods},
-  author={Huang, Feihu and [Gao], [Shangqian]  and Pei, Jian and Huang, Heng},
+  author={Huang, Feihu and Gao, Shangqian  and Pei, Jian and Huang, Heng},
   booktitle={International conference on machine learning (ICML)},
   pages={4422--4433},
   year={2020},
@@ -127,7 +127,7 @@ abbr={ICLR},
 }
 @article{huang2022enhanced,
   title={Enhanced bilevel optimization via bregman distance},
-  author={Huang, Feihu and Li, Junyi and [Gao], [Shangqian]  and Huang, Heng},
+  author={Huang, Feihu and Li, Junyi and Gao, Shangqian  and Huang, Heng},
   journal={Advances in Neural Information Processing Systems (NeurIPS)},
   volume={35},
   pages={28928--28939},
@@ -136,7 +136,7 @@ abbr={ICLR},
 }
 @article{yang2016discriminative,
   title={Discriminative multi-instance multitask learning for 3D action recognition},
-  author={Yang, Yanhua and Deng, Cheng and [Gao], [Shangqian]  and Liu, Wei and Tao, Dapeng and Gao, Xinbo},
+  author={Yang, Yanhua and Deng, Cheng and Gao, Shangqian  and Liu, Wei and Tao, Dapeng and Gao, Xinbo},
   journal={IEEE Transactions on Multimedia},
   volume={19},
   number={3},
@@ -147,7 +147,7 @@ abbr={ICLR},
 }
 @inproceedings{gao2019cross,
   title={Cross domain model compression by structurally weight sharing},
-  author={[Gao], [Shangqian]  and Deng, Cheng and Huang, Heng},
+  author={Gao, Shangqian  and Deng, Cheng and Huang, Heng},
   booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
   pages={8973--8982},
   year={2019},
@@ -155,7 +155,7 @@ abbr={ICLR},
 }
 @inproceedings{huo2017video,
   title={Video recovery via learning variation and consistency of images},
-  author={Huo, Zhouyuan and [Gao], [Shangqian] and Cai, Weidong and Huang, Heng},
+  author={Huo, Zhouyuan and Gao, Shangqian and Cai, Weidong and Huang, Heng},
   booktitle={Proceedings of the AAAI Conference on Artificial Intelligence (AAAI)},
   volume={31},
   number={1},
@@ -164,7 +164,7 @@ abbr={ICLR},
 }
 @article{huang2019zeroth,
   title={Zeroth-order stochastic alternating direction method of multipliers for nonconvex nonsmooth optimization},
-  author={Huang, Feihu and [Gao], [Shangqian]  and Chen, Songcan and Huang, Heng},
+  author={Huang, Feihu and Gao, Shangqian  and Chen, Songcan and Huang, Heng},
   journal={International Joint Conferences on Artificial Intelligence (IJCAI)},
   pages={2549-2555},
   year={2019},
@@ -172,7 +172,7 @@ abbr={ICLR},
 }
 @inproceedings{kong2018action,
   title={Action prediction from videos via memorizing hard-to-predict samples},
-  author={[Gao]*, [Shangqian] and Kong*, Yu and Sun, Bin and Fu, Yun},
+  author={Gao*, Shangqian and Kong*, Yu and Sun, Bin and Fu, Yun},
   booktitle={Proceedings of the AAAI conference on artificial intelligence  (AAAI)},
   volume={32},
   number={1},
@@ -181,7 +181,7 @@ abbr={ICLR},
 }
 @article{gu2021black,
   title={Black-box reductions for zeroth-order gradient algorithms to achieve lower query complexity},
-  author={Gu, Bin and Wei, Xiyuan and [Gao], [Shangqian] and Xiong, Ziran and Deng, Cheng and Huang, Heng},
+  author={Gu, Bin and Wei, Xiyuan and Gao, Shangqian and Xiong, Ziran and Deng, Cheng and Huang, Heng},
   journal={The Journal of Machine Learning Research (JMLR)},
   volume={22},
   number={1},
@@ -192,7 +192,7 @@ abbr={ICLR},
 }
 @article{huang2022riemannian,
   title={Riemannian gradient methods for stochastic composition problems},
-  author={Huang, Feihu and [Gao], [Shangqian]},
+  author={Huang, Feihu and Gao, Shangqian},
   journal={Neural Networks},
   volume={153},
   pages={224--234},
@@ -202,7 +202,7 @@ abbr={ICLR},
 }
 @article{huang2022accelerated,
   title={Accelerated zeroth-order and first-order momentum methods from mini to minimax optimization},
-  author={Huang, Feihu and [Gao], [Shangqian] and Pei, Jian and Huang, Heng},
+  author={Huang, Feihu and Gao, Shangqian and Pei, Jian and Huang, Heng},
   journal={The Journal of Machine Learning Research  (JMLR)},
   volume={23},
   number={1},
@@ -213,7 +213,7 @@ abbr={ICLR},
 }
 @inproceedings{zhang2022improving,
   title={Improving social network embedding via new second-order continuous graph neural networks},
-  author={Zhang, Yanfu and [Gao], [Shangqian] and Pei, Jian and Huang, Heng},
+  author={Zhang, Yanfu and Gao, Shangqian and Pei, Jian and Huang, Heng},
   booktitle={Proceedings of the 28th ACM SIGKDD conference on knowledge discovery and data mining  (KDD)},
   pages={2515--2523},
   year={2022},
@@ -221,7 +221,7 @@ abbr={ICLR},
 }
 @article{huang2023gradient,
   title={Gradient Descent Ascent for Minimax Problems on Riemannian Manifolds},
-  author={Huang, Feihu and  [Gao], [Shangqian]},
+  author={Huang, Feihu and  Gao, Shangqian},
   journal={IEEE Transactions on Pattern Analysis and Machine Intelligence (PAMI)},
   year={2023},
   publisher={IEEE},
@@ -229,7 +229,7 @@ abbr={ICLR},
 }
 @article{huang2022enhanced,
   title={Enhanced bilevel optimization via bregman distance},
-  author={Huang, Feihu and Li, Junyi and [Gao], [Shangqian] and Huang, Heng},
+  author={Huang, Feihu and Li, Junyi and Gao, Shangqian and Huang, Heng},
   journal={Advances in Neural Information Processing Systems},
   volume={35},
   pages={28928--28939},
@@ -237,8 +237,8 @@ abbr={ICLR},
   abbr={NeurIPS},
 }
 @inproceedings{EMNLP23,
-  author       = {Ting Hua* and Xiao Li* and [Shangqian] 
-                  [Gao]
+  author       = {Ting Hua* and Xiao Li* and Shangqian 
+                  Gao
                   Yen{-}Chang Hsu and
                   Felicity Wang and
                   Qian Lou and
