--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -221,10 +221,8 @@ abbr={CVPR},
 }
 @inproceedings{EMNLP23,
   author       = {Ting Hua* and Xiao Li* and Shangqian 
-                  Gao
+                  Gao and
                   Yen{-}Chang Hsu and
-                  Felicity Wang and
-                  Qian Lou and
                   Yilin Shen and
                   Hongxia Jin},
   title        = {Dynamic Low-rank Estimation for Transformer-based Language Models},
