--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,67 @@
 ---
 ---
+@inproceedings{wacv24,
+  author       = {Minchul Kim and \textbf{Shangqian} 
+                  \textbf{Gao} and
+                  Yen{-}Chang Hsu and
+                  Yilin Shen and
+                  Hongxia Jin},
+  title        = {Token Fusion: Bridging the Gap between Token Pruning and Token Merging},
+  booktitle    = {Winter Conference on Computer Vision (WACV)},
+  year         = {2024},
+
+}
+@inproceedings{cvpr24_1,
+  author       = {\textbf{Shangqian} 
+                  \textbf{Gao*} and
+                  Xidong Wu* and 
+                  Zeyu Zhang and 
+                  Zhenzhen Li and 
+                  Runxue Bao and Yanfu Zhang and Xiaoqian Wang and Heng Huang},
+  title        = {Auto-Train-Once: Controller Network Guided Automatic Network Pruning from Scratch},
+  booktitle    = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) (to appear)},
+  year         = {2024},
+
+}
+@inproceedings{cvpr24_2,
+  author       = {\textbf{Shangqian} 
+                  \textbf{Gao*} and
+                  Junyi Li* and Zeyu Zhang* and
+                  Yanfu Zhang
+                  and Weidong Cai and Heng Huang},
+  title        = {Device-Wise Federated Network Pruning},
+  booktitle    = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) (to appear)},
+  year         = {2024},
+
+
+}
+@inproceedings{cvpr24_3,
+  author       = {\textbf{Shangqian} 
+                  \textbf{Gao*} and
+                  Alireza Ganjdanesh* and Heng Huang},
+  title        = {Jointly Training and Pruning CNNs via Learnable Agent Guidance and Alignment},
+  booktitle    = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) (to appear)},
+  year         = {2024},
+
+}
+@inproceedings{cvpr24_4,
+  author       = {\textbf{Shangqian} 
+                  \textbf{Gao} and
+                  Yanfu Zhang and 
+                  Feihu Huang and Heng Huang},
+  title        = {BilevelPruning: Unified Dynamic and Static Channel Pruning for Convolutional Neural Networks},
+  booktitle    = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) (to appear)},
+  year         = {2024},
+
+}
+@inproceedings{naacl24,
+  author       = {\textbf{Shangqian} 
+                  \textbf{Gao} and Ting Hua and Yen-Chang Hsu and Yilin Shen and Hongxia Jin},
+  title        = {Adaptive Rank Selections for Low-Rank Approximation of Language Models},
+  booktitle    = {Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL) (to appear)},
+  year         = {2024},
+
+}
 @inproceedings{gao2020discrete,
   title={Discrete model compression with resource constraint for deep neural networks},
   author={Gao, Shangqian  and Huang, Feihu and Pei, Jian and Huang, Heng},
@@ -127,14 +189,6 @@ abbr={CVPR},
   year={2016},
   publisher={IEEE},
   abbr={TMM},
-}
-@inproceedings{gao2019cross,
-  title={Cross domain model compression by structurally weight sharing},
-  author={Gao, Shangqian  and Deng, Cheng and Huang, Heng},
-  booktitle={Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
-  pages={8973--8982},
-  year={2019},
-  abbr={CVPR},
 }
 @inproceedings{huo2017video,
   title={Video recovery via learning variation and consistency of images},
