--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,8 +1,8 @@
 ---
 ---
 @inproceedings{wacv24,
-  author       = {Minchul Kim and \textbf{Shangqian} 
-                  \textbf{Gao} and
+  author       = {Minchul Kim and Shangqian
+                  Gao and
                   Yen{-}Chang Hsu and
                   Yilin Shen and
                   Hongxia Jin},
@@ -12,9 +12,8 @@
 
 }
 @inproceedings{cvpr24_1,
-  author       = {\textbf{Shangqian} 
-                  \textbf{Gao*} and
-                  Xidong Wu* and 
+  author       = {Xidong Wu* and Shangqian
+                  Gao* and
                   Zeyu Zhang and 
                   Zhenzhen Li and 
                   Runxue Bao and Yanfu Zhang and Xiaoqian Wang and Heng Huang},
@@ -24,8 +23,7 @@
 
 }
 @inproceedings{cvpr24_2,
-  author       = {\textbf{Shangqian} 
-                  \textbf{Gao*} and
+  author       = {Shangqian Gao* and
                   Junyi Li* and Zeyu Zhang* and
                   Yanfu Zhang
                   and Weidong Cai and Heng Huang},
@@ -36,17 +34,15 @@
 
 }
 @inproceedings{cvpr24_3,
-  author       = {\textbf{Shangqian} 
-                  \textbf{Gao*} and
-                  Alireza Ganjdanesh* and Heng Huang},
+  author       = {Alireza Ganjdanesh* and Shangqian Gao* and Heng Huang},
   title        = {Jointly Training and Pruning CNNs via Learnable Agent Guidance and Alignment},
   booktitle    = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) (to appear)},
   year         = {2024},
 
 }
 @inproceedings{cvpr24_4,
-  author       = {\textbf{Shangqian} 
-                  \textbf{Gao} and
+  author       = {Shangqian
+                  Gao and
                   Yanfu Zhang and 
                   Feihu Huang and Heng Huang},
   title        = {BilevelPruning: Unified Dynamic and Static Channel Pruning for Convolutional Neural Networks},
@@ -55,8 +51,8 @@
 
 }
 @inproceedings{naacl24,
-  author       = {\textbf{Shangqian} 
-                  \textbf{Gao} and Ting Hua and Yen-Chang Hsu and Yilin Shen and Hongxia Jin},
+  author       = {Shangqian
+                  Gao and Ting Hua and Yen-Chang Hsu and Yilin Shen and Hongxia Jin},
   title        = {Adaptive Rank Selections for Low-Rank Approximation of Language Models},
   booktitle    = {Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL) (to appear)},
   year         = {2024},
