--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,6 +9,7 @@
   title        = {Token Fusion: Bridging the Gap between Token Pruning and Token Merging},
   booktitle    = {Winter Conference on Computer Vision (WACV)},
   year         = {2024},
+    abbr={WACV},
 
 }
 @inproceedings{cvpr24_1,
@@ -20,6 +21,7 @@
   title        = {Auto-Train-Once: Controller Network Guided Automatic Network Pruning from Scratch},
   booktitle    = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) (to appear)},
   year         = {2024},
+    abbr={CVPR},
 
 }
 @inproceedings{cvpr24_2,
@@ -30,6 +32,7 @@
   title        = {Device-Wise Federated Network Pruning},
   booktitle    = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) (to appear)},
   year         = {2024},
+    abbr={CVPR},
 
 
 }
@@ -38,6 +41,7 @@
   title        = {Jointly Training and Pruning CNNs via Learnable Agent Guidance and Alignment},
   booktitle    = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) (to appear)},
   year         = {2024},
+    abbr={CVPR},
 
 }
 @inproceedings{cvpr24_4,
@@ -48,7 +52,7 @@
   title        = {BilevelPruning: Unified Dynamic and Static Channel Pruning for Convolutional Neural Networks},
   booktitle    = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) (to appear)},
   year         = {2024},
-
+  abbr={CVPR},
 }
 @inproceedings{naacl24,
   author       = {Shangqian
@@ -56,6 +60,7 @@
   title        = {Adaptive Rank Selections for Low-Rank Approximation of Language Models},
   booktitle    = {Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL) (to appear)},
   year         = {2024},
+  abbr={NAACL},
 
 }
 @inproceedings{gao2020discrete,
