--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,16 +1,12 @@
 ---
 ---
-@inproceedings{wacv24,
-  author       = {Minchul Kim and Shangqian
-                  Gao and
-                  Yen{-}Chang Hsu and
-                  Yilin Shen and
-                  Hongxia Jin},
-  title        = {Token Fusion: Bridging the Gap between Token Pruning and Token Merging},
-  booktitle    = {Winter Conference on Computer Vision (WACV)},
+@inproceedings{naacl24,
+  author       = {Shangqian
+                  Gao and Ting Hua and Yen-Chang Hsu and Yilin Shen and Hongxia Jin},
+  title        = {Adaptive Rank Selections for Low-Rank Approximation of Language Models},
+  booktitle    = {Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL) (to appear)},
   year         = {2024},
-    abbr={WACV},
-
+  abbr={NAACL},
 }
 @inproceedings{cvpr24_1,
   author       = {Xidong Wu* and Shangqian
@@ -54,13 +50,23 @@
   year         = {2024},
   abbr={CVPR},
 }
-@inproceedings{naacl24,
-  author       = {Shangqian
-                  Gao and Ting Hua and Yen-Chang Hsu and Yilin Shen and Hongxia Jin},
-  title        = {Adaptive Rank Selections for Low-Rank Approximation of Language Models},
-  booktitle    = {Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL) (to appear)},
+@inproceedings{ali2024gan,
+  title={Compressing Image-to-Image Translation GANs Using Local Density Structures on Their Learned Manifold},
+  author={Ganjdanesh*, Alireza and Gao*, Shangqian and Huang, Heng},
+  booktitle={Proceedings of the AAAI Conference on Artificial Intelligence (AAAI) (to appear)},
+  year={2024},
+  abbr={AAAI},
+}
+@inproceedings{wacv24,
+  author       = {Minchul Kim and Shangqian
+                  Gao and
+                  Yen{-}Chang Hsu and
+                  Yilin Shen and
+                  Hongxia Jin},
+  title        = {Token Fusion: Bridging the Gap between Token Pruning and Token Merging},
+  booktitle    = {Winter Conference on Computer Vision (WACV)},
   year         = {2024},
-  abbr={NAACL},
+    abbr={WACV},
 
 }
 @inproceedings{gao2020discrete,
@@ -82,7 +88,7 @@
 
 @inproceedings{huang2021bregman,
   title={Bregman Gradient Policy Optimization},
-  author={Gao*, Shangqian  and Huang*, Feihu and Huang, Heng},
+  author={Huang*, Feihu and Gao*, Shangqian and Huang, Heng},
   booktitle={International Conference on Learning Representations (ICLR)},
   year={2022},
   abbr={ICLR},
@@ -115,7 +121,7 @@ abbr={ICLR},
 }
 @inproceedings{zhang2021exploration,
   title={Exploration and estimation for model compression},
-  author={ Gao*, Shangqian and Zhang*, Yanfu and Huang, Heng},
+  author={Zhang*, Yanfu and Gao*, Shangqian and Huang, Heng},
   booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV)},
   pages={487--496},
   year={2021},
@@ -123,7 +129,7 @@ abbr={ICLR},
 }
 @inproceedings{ganjdanesh2022interpretations,
   title={Interpretations steered network pruning via amortized inferred saliency maps},
-  author={Gao*, Shangqian and Ganjdanesh*, Alireza and Huang, Heng},
+  author={Ganjdanesh*, Alireza and Gao*, Shangqian and Huang, Heng},
   booktitle={European Conference on Computer Vision (ECCV)},
   pages={278--296},
   year={2022},
@@ -148,7 +154,7 @@ abbr={CVPR},
 }
 @inproceedings{li2021adversarial,
   title={Adversarial attack on deep cross-modal hamming retrieval},
-  author={ Gao*, Shangqian and Li*, Chao and Deng, Cheng and Liu, Wei and Huang, Heng},
+  author={Li*, Chao and Gao*, Shangqian and Deng, Cheng and Liu, Wei and Huang, Heng},
   booktitle={Proceedings of the IEEE/CVF International Conference on Computer Vision (ICCV)},
   pages={2218--2227},
   year={2021},
