--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,10 +1,25 @@
 ---
 ---
+@inproceedings{neurips24,
+  author       = {Shangqian Gao and Chi-Heng Lin and Ting Hua and Zheng Tang and Yilin Shen and Hongxia Jin and Yen-Chang Hsu},
+  title        = {DISP-LLM: Dimension-Independent Structural Pruning for Large Language Models},
+  booktitle    = {Advances in neural information processing systems (NeurIPS) (to appear)},
+  year         = {2024},
+  abbr={NeurIPS},
+}
+@inproceedings{emnlp24,
+  author       = {Zhepeng Wang and Runxue Bao and Yawen Wu and Jackson Taylor and Cao Xiao and Feng Zheng and Weiwen Jiang and Shangqian Gao* and Yanfu Zhang*},
+  title        = {Adaptive Rank Selections for Low-Rank Approximation of Language Models},
+  booktitle    = {Proceedings of the 2024 Conference on Empirical Methods in Natural
+                  Language Processing (to appear)},
+  year         = {2024},
+  abbr={EMNLP},
+}
 @inproceedings{naacl24,
   author       = {Shangqian
                   Gao and Ting Hua and Yen-Chang Hsu and Yilin Shen and Hongxia Jin},
   title        = {Adaptive Rank Selections for Low-Rank Approximation of Language Models},
-  booktitle    = {Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL) (to appear)},
+  booktitle    = {Annual Conference of the North American Chapter of the Association for Computational Linguistics (NAACL)},
   year         = {2024},
   abbr={NAACL},
 }
@@ -15,7 +30,7 @@
                   Zhenzhen Li and 
                   Runxue Bao and Yanfu Zhang and Xiaoqian Wang and Heng Huang},
   title        = {Auto-Train-Once: Controller Network Guided Automatic Network Pruning from Scratch},
-  booktitle    = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) (to appear)},
+  booktitle    = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
   year         = {2024},
     abbr={CVPR},
 
@@ -26,7 +41,7 @@
                   Yanfu Zhang
                   and Weidong Cai and Heng Huang},
   title        = {Device-Wise Federated Network Pruning},
-  booktitle    = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) (to appear)},
+  booktitle    = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
   year         = {2024},
     abbr={CVPR},
 
@@ -35,7 +50,7 @@
 @inproceedings{cvpr24_3,
   author       = {Alireza Ganjdanesh* and Shangqian Gao* and Heng Huang},
   title        = {Jointly Training and Pruning CNNs via Learnable Agent Guidance and Alignment},
-  booktitle    = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) (to appear)},
+  booktitle    = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
   year         = {2024},
     abbr={CVPR},
 
@@ -46,14 +61,14 @@
                   Yanfu Zhang and 
                   Feihu Huang and Heng Huang},
   title        = {BilevelPruning: Unified Dynamic and Static Channel Pruning for Convolutional Neural Networks},
-  booktitle    = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) (to appear)},
+  booktitle    = {Proceedings of the IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)},
   year         = {2024},
   abbr={CVPR},
 }
 @inproceedings{ali2024gan,
   title={Compressing Image-to-Image Translation GANs Using Local Density Structures on Their Learned Manifold},
   author={Ganjdanesh*, Alireza and Gao*, Shangqian and Huang, Heng},
-  booktitle={Proceedings of the AAAI Conference on Artificial Intelligence (AAAI) (to appear)},
+  booktitle={Proceedings of the AAAI Conference on Artificial Intelligence (AAAI)},
   year={2024},
   abbr={AAAI},
 }
@@ -288,7 +303,7 @@ abbr={CVPR},
                   Hongxia Jin},
   title        = {Dynamic Low-rank Estimation for Transformer-based Language Models},
   booktitle    = {Proceedings of the 2023 Conference on Empirical Methods in Natural
-                  Language Processing Findings (EMNLP findings) (to appear)},
+                  Language Processing Findings (EMNLP findings)},
   year         = {2023},
   abbr={EMNLP},
 }
