--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,7 +9,7 @@
 }
 @inproceedings{emnlp24,
   author       = {Zhepeng Wang and Runxue Bao and Yawen Wu and Jackson Taylor and Cao Xiao and Feng Zheng and Weiwen Jiang and Shangqian Gao* and Yanfu Zhang*},
-  title        = {Adaptive Rank Selections for Low-Rank Approximation of Language Models},
+  title        = {Unlocking Memorization in Large Language Models with Dynamic Soft Prompting},
   booktitle    = {Proceedings of the 2024 Conference on Empirical Methods in Natural
                   Language Processing (to appear)},
   year         = {2024},
