--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,7 +10,7 @@
 @inproceedings{emnlp24,
   author       = {Zhepeng Wang and Runxue Bao and Yawen Wu and Jackson Taylor and Cao Xiao and Feng Zheng and Weiwen Jiang and Shangqian Gao* and Yanfu Zhang*},
   title        = {Unlocking Memorization in Large Language Models with Dynamic Soft Prompting},
-  booktitle    = {Proceedings of the 2024 Conference on Empirical Methods in Natural
+  booktitle    = {Proceedings of the Conference on Empirical Methods in Natural
                   Language Processing (to appear)},
   year         = {2024},
   abbr={EMNLP},
@@ -302,7 +302,7 @@ abbr={CVPR},
                   Yilin Shen and
                   Hongxia Jin},
   title        = {Dynamic Low-rank Estimation for Transformer-based Language Models},
-  booktitle    = {Proceedings of the 2023 Conference on Empirical Methods in Natural
+  booktitle    = {Proceedings of the Conference on Empirical Methods in Natural
                   Language Processing Findings (EMNLP findings)},
   year         = {2023},
   abbr={EMNLP},
