--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 @inproceedings{neurips24,
   author       = {Shangqian Gao and Chi-Heng Lin and Ting Hua and Zheng Tang and Yilin Shen and Hongxia Jin and Yen-Chang Hsu},
   title        = {DISP-LLM: Dimension-Independent Structural Pruning for Large Language Models},
-  booktitle    = {Advances in neural information processing systems (NeurIPS) (to appear)},
+  booktitle    = {Advances in Neural Information Processing Systems (NeurIPS) (to appear)},
   year         = {2024},
   abbr={NeurIPS},
 }
@@ -11,7 +11,7 @@
   author       = {Zhepeng Wang and Runxue Bao and Yawen Wu and Jackson Taylor and Cao Xiao and Feng Zheng and Weiwen Jiang and Shangqian Gao* and Yanfu Zhang*},
   title        = {Unlocking Memorization in Large Language Models with Dynamic Soft Prompting},
   booktitle    = {Proceedings of the Conference on Empirical Methods in Natural
-                  Language Processing (to appear)},
+                  Language Processing (EMNLP) (to appear)},
   year         = {2024},
   abbr={EMNLP},
 }
