--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -165,7 +165,7 @@ abbr={CVPR},
   journal={Advances in neural information processing systems (NeurIPS)},
   volume={32},
   year={2019},
-  abbr={CVPR},
+  abbr={NeurIPS},
 }
 @inproceedings{li2021adversarial,
   title={Adversarial attack on deep cross-modal hamming retrieval},
