--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,32 @@
 ---
 ---
+@inproceedings{
+anonymous2025flexigpt,
+title={Flexi{GPT}: Pruning and Extending Large Language Models with Low-Rank Weight Sharing},
+author={James Seale Smith and Chi-Heng Lin and Shikhar Tuli and Haris Jeelani and Shangqian Gao and Yilin Shen and Hongxia Jin and Yen-Chang Hsu},
+booktitle={The 2025 Annual Conference of the Nations of the Americas Chapter of the ACL},
+year={2025},
+abbr={NAACL},
+url={https://openreview.net/forum?id=XDrzeWCePD}
+}
+@inproceedings{
+iclr2025modegpt,
+title={MoDe{GPT}: Modular Decomposition for Large Language Model Compression},
+author={Chi-Heng Lin and Shangqian Gao and James Seale Smith and Abhishek Patel and Shikhar Tuli and Yilin Shen and Hongxia Jin and Yen-Chang Hsu},
+booktitle={The Thirteenth International Conference on Learning Representations},
+year={2025},
+abbr={ICLR},
+url={https://openreview.net/forum?id=8EfxjTCg2k}
+}
+@inproceedings{
+iclr2025not,
+title={Not All Prompts Are Made Equal: Prompt-based Pruning of Text-to-Image Diffusion Models},
+author={Alireza Ganjdanesh and Reza Shirkavand and Shangqian Gao and Heng Huang},
+booktitle={The Thirteenth International Conference on Learning Representations},
+year={2025},
+abbr={ICLR},
+url={https://openreview.net/forum?id=3BhZCfJ73Y}
+}
 @inproceedings{neurips24,
   author       = {Shangqian Gao and Chi-Heng Lin and Ting Hua and Zheng Tang and Yilin Shen and Hongxia Jin and Yen-Chang Hsu},
   title        = {DISP-LLM: Dimension-Independent Structural Pruning for Large Language Models},
