--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -27,7 +27,7 @@ url={https://openreview.net/forum?id=3BhZCfJ73Y}
 @inproceedings{neurips24,
   author       = {Shangqian Gao and Chi-Heng Lin and Ting Hua and Zheng Tang and Yilin Shen and Hongxia Jin and Yen-Chang Hsu},
   title        = {DISP-LLM: Dimension-Independent Structural Pruning for Large Language Models},
-  booktitle    = {Advances in Neural Information Processing Systems (NeurIPS) (to appear)},
+  booktitle    = {Advances in Neural Information Processing Systems (NeurIPS)},
   year         = {2024},
   abbr={NeurIPS},
 }
@@ -35,7 +35,7 @@ url={https://openreview.net/forum?id=3BhZCfJ73Y}
   author       = {Zhepeng Wang and Runxue Bao and Yawen Wu and Jackson Taylor and Cao Xiao and Feng Zheng and Weiwen Jiang and Shangqian Gao* and Yanfu Zhang*},
   title        = {Unlocking Memorization in Large Language Models with Dynamic Soft Prompting},
   booktitle    = {Proceedings of the Conference on Empirical Methods in Natural
-                  Language Processing (EMNLP) (to appear)},
+                  Language Processing (EMNLP)},
   year         = {2024},
   abbr={EMNLP},
 }
